syntax = "proto3";

package user.v1;

option go_package = "github.com/Fancu1/phoenix-rss/protos/gen/go/user;userpb";

message User {
  uint64 id = 1;
  string username = 2;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  User user = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  User user = 2;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string error = 2;
  User user = 3; // return claims-derived user if valid
}

message GetUserFromTokenRequest {
  string token = 1;
}

message GetUserFromTokenResponse {
  User user = 1;
}

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc GetUserFromToken(GetUserFromTokenRequest) returns (GetUserFromTokenResponse);
}


